<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForgePoker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="start_game">Start Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="game_rule">Game Rules</string>
    <string name="action_ready">Ready ?</string>
    <string name="bid1">1分</string>
    <string name="bid2">2分</string>
    <string name="bid3">3分</string>
    <string name="bidno">不叫</string>
    <string name="play">出牌</string>
    <string name="prompt">提示</string>
    <string name="reselect">重选</string>
    <string name="pass">不出</string>
    
    <string name="title_activity_rule">Game Rule Settings</string>
	<string name="playerSettings">Player Settings</string>
	<string name="changePlayerCount">Can we change payer count?</string>
	<string name="playerCount">Player count</string>
	
	<string name="deckSettings">Deck Settings</string>
	<string name="deckContent">Deck content</string>
	<string name="changeDeckCount">Can we change deck count?</string>
	<string name="deckCount">Deck count</string>
	<string name="baseCardCount">Base card count</string>
	<string name="showRivalCards">Show rival\'s cards</string>
	
	<string name="PatternSettings">Pattern Settings</string>
	<string name="patterns">Patterns</string>
</resources>
