<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.5" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_gravity="center_vertical" >

        <Button
            android:id="@+id/button_startGame"
            style="@style/MenuButtonStyle"
            android:onClick="onClickStartGame"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/button_gameRule"
            style="@style/MenuButtonStyle"
            android:onClick="onClickGameRule"
            android:text="@string/game_rule" />

        <Button
            android:id="@+id/button_exitGame"
            style="@style/MenuButtonStyle"
            android:text="@string/exit_game" />
    </LinearLayout>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.5" >
    </ImageView>

</LinearLayout>